# rkvm

./: Cargo.toml  README.md
rkvm-client/: Cargo.toml
rkvm-client/src/: client.rs  main.rs
rkvm-protocol/: Cargo.toml
rkvm-protocol/src/: lib.rs
rkvm-server/: Cargo.toml
rkvm-server/src/: grab.rs  main.rs  server.rs  wayland.rs  xclip.rs
windows-clipboard-files/: Cargo.toml
windows-clipboard-files/src/: data_object.rs  lib.rs
