[package]
name = "rkvm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
enigo = "0.1.2"
tokio = { version = "1.28.0", features = ["full"] }

rkvm-protocol = { path = "../rkvm-protocol" }
simple_logger = "4.1.0"
log = "0.4.17"
keycode = "0.4.0"
arboard = "3.2.0"

serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.4"

tao = { version = "0.20.0", features = ["tray"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
quinn = "0.10.2"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
