[package]
name = "rkvm-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
bincode = "1.3.3"
keycode = { version = "0.4.0", features = ["serde"] }
