[package]
name = "rkvm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
evdev = "0.12.1"
input = "0.8.2"
keycode = "0.4.0"
lazy_static = "1.4.0"
libc = "0.2.142"
log = "0.4.17"
nix = "0.26.2"

simple_logger = "4.1.0"
tokio = { version = "1.28.0", features = ["full"] }

rkvm-protocol = { path = "../rkvm-protocol" }
arboard = "3.2.0"
