[package]
name = "windows-clipboard-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
thiserror = "1.0.48"
windows = { version = "0.51.1", features = [
    "implement",
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_System_Com_StructuredStorage",
] }
